--- a/web/static/validCoding/css/codingAnalysis.css
+++ b/web/static/validCoding/css/codingAnalysis.css
@@ -2,7 +2,9 @@
     padding-right: 0;
 }
 
-.valid_panel, .student_panel{
+.project_valid_panel, .project_composition_panel, .project_info_panel,
+.student_info_panel, .student_valid_panel, .student_composition_panel
+{
     display: none;
 }
 
@@ -37,4 +39,20 @@ svg.connection_svg {
     text-anchor: middle;
     stroke: black;
     stroke-width :"2px";
+}
+
+.name_title {
+    font-family: "Segoe UI", sans-serif;
+    font-style: normal;
+    color: rgb(3,102,214);
+}
+
+.common_tittle {
+    font-family: "Segoe UI", sans-serif;
+    font-style: normal;
+    color: rgb(176,114,25);
+}
+
+#left-bar li {
+    font-size: 18px;
 }
